# GTOCX

./: .gitignore  CMakeLists.txt  README.md  build.sh
data/solution_files/: 1-2-B-num1-gtocx-leaderboard-soln  AerospaceCorp-gtocx-leaderboard-soln  CSU-gtocx-leaderboard-soln  ESA-ACT-gtocx-leaderboard-soln  HIT_BACC-gtocx-leaderboard-soln  MSU-RAS-RUDN-gtocx-leaderboard-soln  NUDT-XSCC-gtocx-leaderboard-soln  TeamJena-gtocx-leaderboard-soln  TeamKataskopoi-gtocx-leaderboard-soln  TheCitadel-gtocx-leaderboard-soln  TsinghuaLAD-XINGYI-gtocx-leaderboard-soln  worhp2orb-gtocx-leaderboard-soln
inc/: common.h  event_processor.h  events.h  merit_function.h  propagate.h  shiplog.h  star.h  transfer.h  vessels.h
python/: GUI_README.md  plot_galaxy.py  plot_set.py  plot_ship_ranges.py  template.ui
src/: event_processor.cpp  events.cpp  merit_function.cpp  propagate.cpp  shiplog.cpp  star.cpp  transfer.cpp  vessels.cpp
test/: count_transfers.cpp  event_test.cpp  merit_function_test.cpp  num_jac_test.cpp  prop_test.cpp  star_test.cpp  test.cpp  test_prop.cpp  test_propagate.cpp  transfer_test.cpp
